# IDCT-video-decoder-using-intrinsics-

./: .gitignore  CMakeLists.txt  Makefile.win  Project2.dev  Project2.layout  README.md  Readme.md  SIMulated.dev  SIMulated.layout  Untitled2.cpp  day1.md  day2.md  day3.md  day4.md  day5.md  idctutils.cpp  idctutils.h  main.cpp  main.html
enc_temp_folder/80cc13bdeed3e06dfcb4115bf4cec/: Readme.md
nodejsinterview/: eventloop.md
offset_chunk_compute_m128/: main.cpp
